# speech-to-text-parakeet

./: CLAUDE.md  README.md  pyproject.toml
src/dictate/: __init__.py  __main__.py  audio.py  config.py  hotkey.py  output.py  overlay.py  transcribe.py
